--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 	  <script src="js/multiMarkersName.js"></script>
 	</head>
 	<body>
-	<a-scene markers_start vr-mode-ui="enabled: false" color-space="sRGB" renderer="gammaOutput: true"
-  embedded arjs='debugUIEnabled: false; sourceType: webcam; patternRatio: 0.85; trackingMethod: best;'>
+	<a-scene arjs='detectionMode: mono_and_matrix; matrixCodeType: 4x4;'></a-scene>
     	<a-entity id='userCamera' camera>
 		<a-cursor> </a-cursor>
     	</a-entity>
